--- a/go/.env.example
+++ b/go/.env.example
@@ -20,7 +20,8 @@ BASE_DOMAIN=example.com
 BASE_URL=https://example.com
 
 # Database Configuration
-DB_HOST=localhost
+# When running via docker-compose, point to service names
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
@@ -44,7 +45,8 @@ FROM_NAME=SaaS App
 COMPANY_NAME=SaaS Company
 
 # Redis Configuration
-REDIS_HOST=localhost
+# When running via docker-compose, point to service names
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
