--- a/go/docker-compose.ci.yml
+++ b/go/docker-compose.ci.yml
@@ -5,8 +5,6 @@ services:
       POSTGRES_DB: saas_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -17,8 +15,6 @@ services:
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
     healthcheck:
@@ -28,7 +24,14 @@ services:
       retries: 5
 
   app:
-    build: .
+    image: go-app:ci
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # Ensure any volumes defined in the development compose file are
+    # removed when merging this CI file. Setting an empty array tells
+    # Compose there are no volumes for this service (overrides dev bind).
+    volumes: []
     ports:
       - "8080:8080"
     env_file:
@@ -38,12 +41,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    volumes:
-      # Mount source for live development; remove in production
-      - .:/app
     command: ["./bin/server"]
     restart: unless-stopped
 
 volumes:
   postgres_data:
   redis_data:
+
