--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -9,8 +9,14 @@ permissions:
 on:
   push:
     branches: [ main, develop, master ]
+    paths:
+      - 'go/**'
+      - '.github/**'
   pull_request:
     branches: [ main, master ]
+    paths:
+      - 'go/**'
+      - '.github/**'
 
 jobs:
   lint:
@@ -24,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.24'
       - name: Install golangci-lint
         run: |
           # Install golangci-lint into GOPATH/bin for the runner
@@ -72,7 +78,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.24'
       - name: Cache Go build and modules
         uses: actions/cache@v4
         with:
@@ -142,7 +148,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.24'
       - name: Build
         run: go build -v ./cmd/server
 
