--- a/go/.env.example
+++ b/go/.env.example
@@ -1,5 +1,6 @@
 # Environment Configuration
-ENV=development
+# Options: development, staging, production (affects HTTPS redirect)
+ENVIRONMENT=development
 
 # Server Configuration
 SERVER_HOST=0.0.0.0
@@ -16,6 +17,9 @@ TLS_KEY_FILE=/path/to/private.key
 # Base domain for tenant resolution (required for subdomain routing)
 BASE_DOMAIN=example.com
 
+# CORS Configuration (comma-separated origins)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
+
 # Base URL for email links (required for email service)
 BASE_URL=https://example.com
 
@@ -24,7 +28,8 @@ BASE_URL=https://example.com
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=postgres
+# REQUIRED: Set a strong database password
+DB_PASSWORD=your-secure-database-password-here
 DB_NAME=saas_db
 DB_SSL_MODE=disable
 DB_MAX_OPEN_CONNS=25
@@ -33,9 +38,12 @@ DB_CONN_MAX_LIFETIME=30m
 DB_CONN_MAX_IDLE_TIME=5m
 
 # JWT Configuration
-JWT_SECRET=secret-jwt-key-change-this-in-production
+# REQUIRED: Generate a strong secret (min 32 characters):
+# openssl rand -base64 32
+JWT_SECRET=CHANGE-ME-use-openssl-rand-base64-32-for-production
 JWT_ACCESS_TTL=15m
-JWT_REFRESH_TTL=168h
+# Refresh token TTL reduced to 24 hours for security
+JWT_REFRESH_TTL=24h
 SESSION_TIMEOUT=2h
 
 # SendGrid Email Configuration
