--- a/python/.env.example
+++ b/python/.env.example
@@ -6,7 +6,8 @@ SERVER_PORT=8080
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=postgres
+# REQUIRED: Set a strong database password
+DB_PASSWORD=your-secure-database-password-here
 DB_NAME=saas_db
 
 # Database Connection Pool Settings (Production-ready defaults)
@@ -24,9 +25,12 @@ DATABASE_URL=
 REDIS_URL=redis://redis:6379/0
 
 # JWT / Authentication
-JWT_SECRET=changeme-in-production-use-strong-secret
+# REQUIRED: Generate a strong secret (min 32 characters):
+# python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET=CHANGE-ME-generate-with-secrets-token-urlsafe-32-chars-minimum
 ACCESS_TOKEN_TTL_SECONDS=900
-REFRESH_TOKEN_TTL_SECONDS=604800
+# Refresh token TTL reduced to 24 hours for security
+REFRESH_TOKEN_TTL_SECONDS=86400
 
 # Token Cleanup (Background Task)
 REFRESH_TOKEN_CLEANUP_INTERVAL_SECONDS=86400
@@ -39,6 +43,13 @@ TENANT_CACHE_TTL_SECONDS=3600
 SENDGRID_API_KEY=your-sendgrid-api-key-here
 EMAIL_FROM=noreply@example.com
 FRONTEND_URL=http://localhost:3000
+
+# CORS Configuration (comma-separated origins)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8081
+
+# Security
+# Environment: development, staging, production (affects HTTPS redirect)
+ENVIRONMENT=development
 
 # Application Configuration (Docker Compose)
 APP_PORT=8081
